Fix graphs covering up top bar

--- a/index.css
+++ b/index.css
@@ -22,6 +22,7 @@ h1, h2 {
 	right: 0;
 	top: 0;
 	margin-bottom: 10px;
+	z-index: 1;
 }
 
 #topBar #acronym {
